--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,10 +19,26 @@ body {
 }
 
 .calculator {
-    padding: 20px;
+    padding: 30px;
     background-color: #6d6a75ff;
     border: #37323eff 5px solid;
     border-radius: 20px;
     width: 432px;
     height: 632px;
+}
+
+.display {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* I need box-sizing as adding padding will make the display much bigger than it is */
+    box-sizing: border-box;
+    padding: 20px 20px 0 0;
+    width: 100%;
+    height: 150px;
+    border: #37323eff 5px solid;
+    border-radius: 5px;
+    background-color: #deb841ff;
+    font-size: 48px;
 }
