--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,14 @@ body {
     background-color: #deb841ff;
     font-size: 48px;
 }
+
+.numbers {
+    padding: 20px;
+}
+
+.row {
+    width: 100%;
+    height: 110px;
+    border: 1px black solid;
+    background-color: wheat;
+}
