--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,8 +48,19 @@ body {
 }
 
 .row {
+    display: flex;
     width: 100%;
     height: 110px;
     border: 1px black solid;
     background-color: wheat;
+}
+
+button {
+    font-family: 'Roboto Mono', serif;
+    font-size: 32px;
+    height: 100%;
+    width: 25%;
+    border: 2px black solid;
+    border-radius: 1px;
+    background-color: #de9e36ff;
 }
