--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,6 +61,7 @@ button {
     height: 100%;
     width: 25%;
     border: 2px black solid;
+    border-bottom: 0px;
     border-radius: 1px;
     background-color: #de9e36ff;
 }
